--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	
 			<li class="large" style="background-image: url(assets/img/auction.png);"></li>
-			<li class="large" style="background-image: url(assets/img/beercan2.jpg);"></li>
+			<li class="large" style="background-image: url(assets/img/block_chain.png);"></li>
 
 		</div>
 	</section>
@@ -81,16 +81,19 @@
 
 
 	<section class="reviews">
-		<h3 class="title">What others say:</h3>
+		<h3 class="title">We are</h3>
 
-		<p class="quote">책은 고통을 주지만 맥주는 우리를 즐겁게 한다. 영원한 것은 맥주 뿐!</p>
-		<p class="author">— Johann Wolfgang von Goethe</p>
+		<p class="quote">최수린</p>
+		<p class="author">동국대학교 컴퓨터공학전공</p>
 
-		<p class="quote">술이 내게서 앗아간 것보다 내가 술로부터 얻은 것이 더 많다.</p>
-		<p class="author">— Sir Winston Leonard Spencer-Churchill</p>
+		<p class="quote">박태수</p>
+		<p class="author">동국대학교 컴퓨터공학전공</p>
 
-		<p class="quote">일을 더 잘하기 위해 술을 마신다.</p>
-		<p class="author">— Francis Scott Key Fitzgerald</p>
+		<p class="quote">임해영</p>
+		<p class="author">동국대학교 컴퓨터공학전공</p>
+
+		<p class="quote">구정태</p>
+		<p class="author">동국대학교 산업시스템공학</p>
 
 		<h5>저작권 문제 시 삭제하겠습니다.</h5>
 	</section>
